# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
# glpk is a MIP solver, a common tool in Operations Research.

package(
    default_visibility = [
        "//visibility:public",
    ],
    features = [
        "-layering_check",
        "-parse_headers",
    ],
)

exports_files(["LICENSE"])

cc_library(
    name = "glpk",
    srcs = glob(
      include = [
        "src/*.c",
        "src/*/*.c",
      ],
      exclude = [
        "src/zlib/*"
      ]
    ) + [
        "src/amd/amd.h",
        "src/amd/amd_internal.h",
        "src/colamd/colamd.h",
        "src/glpapi.h",
        "src/glpavl.h",
        "src/glpbfd.h",
        "src/glpbfx.h",
        "src/glpdmp.h",
        "src/glpenv.h",
        "src/glpfhv.h",
        "src/glpgmp.h",
        "src/glphbm.h",
        "src/glpios.h",
        "src/glpipm.h",
        "src/glplib.h",
        "src/glplpf.h",
        "src/glpluf.h",
        "src/glplux.h",
        "src/glpmat.h",
        "src/glpmpl.h",
        "src/glpnet.h",
        "src/glpnpp.h",
        "src/glpqmd.h",
        "src/glprgr.h",
        "src/glprng.h",
        "src/glpscf.h",
        "src/glpspm.h",
        "src/glpspx.h",
        "src/glpsql.h",
        "src/glpssx.h",
        "src/glpstd.h",
        "src/glptsp.h",
        "src/minisat/minisat.h",
    ],
    includes = [
      "src",
    ],
    hdrs = [
        "include/glpk.h",
        "src/glpk.h",
    ],
    copts = [
        "-Wno-error",
        "-w",
        "-DHAVE_ZLIB",
        "-DHAVE_SYS_TIME_H",
        "-DHAVE_GETTIMEOFDAY",
    ],
    deps = [
        "@net_zlib//:zlib",
    ],
)

# Same as :glpk, except it adds the header files to the search path, so
# that '#include <glpk.h>' works. This is only allowed for third-party code.
cc_library(
    name = "glpk_inc",
    hdrs = ["include/glpk.h"],
    includes = ["include/"],
    visibility = ["//visibility:private"],
    deps = [],
)

cc_binary(
    name = "glpsol",
    srcs = [
        "examples/glpsol.c",
    ],
    copts = [
        "-Wno-error",
        "-w",
        "-DHAVE_SYS_TIME_H",
        "-DHAVE_GETTIMEOFDAY",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":glpk",
    ],
)

genrule(
  name = "glpk_header_gen",
  srcs = ["src/glpk.h"],
  outs = ["include/glpk.h"],
  cmd = "cat $(location src/glpk.h) > $@",
)
