# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

""" A BUILD file for m4 based on FSF stock source. """

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_hdl//dependency_support:automake_substitution.bzl", "automake_substitution")
load("@rules_hdl//dependency_support:copy.bzl", "touch")
load("@rules_hdl//dependency_support:pseudo_configure.bzl", "pseudo_configure")

package(
    default_visibility = ["//visibility:public"],
    features = [
        "-parse_headers",
        "no_layering_check",
    ],
)

licenses(["restricted"])  # GPLv3

exports_files(["COPYING"])

HEADERS_WITH_C_EXTENSION = [
    "lib/frexp.c",
    "lib/isnan.c",
    "lib/printf-frexp.c",
]

cc_library(
    name = "m4_headers",
    textual_hdrs = glob(
        ["lib/**/*.h", "src/*.h"],
    ) + [
        "lib/config.h",
        "lib/configmake.h",
        "lib/sigsegv.h",
    ] + HEADERS_WITH_C_EXTENSION,
    includes = ["lib"],
    visibility = ["//visibility:private"],
)

cc_binary(
    name = "m4",
    srcs = glob(["src/*.c"]) + [
        "lib/asnprintf.c",
        "lib/asyncsafe-spin.c",
        "lib/basename-lgpl.c",
        "lib/basename.c",
        "lib/binary-io.c",
        "lib/bitrotate.c",
        "lib/c-ctype.c",
        "lib/c-stack.c",
        "lib/c-strcasecmp.c",
        "lib/c-strncasecmp.c",
        "lib/canonicalize.c",
        "lib/clean-temp-simple.c",
        "lib/clean-temp.c",
        "lib/cloexec.c",
        "lib/close-stream.c",
        "lib/closein.c",
        "lib/closeout.c",
        "lib/concat-filename.c",
        "lib/dirname-lgpl.c",
        "lib/dirname.c",
        "lib/dup-safer-flag.c",
        "lib/dup-safer.c",
        "lib/execute.c",
        "lib/exitfail.c",
        "lib/fatal-signal.c",
        "lib/fclose.c",
        "lib/fd-hook.c",
        "lib/fd-safer-flag.c",
        "lib/fd-safer.c",
        "lib/file-set.c",
        "lib/filenamecat-lgpl.c",
        "lib/filenamecat.c",
        "lib/findprog-in.c",
        "lib/fopen-safer.c",
        "lib/fpurge.c",
        "lib/freadahead.c",
        "lib/freading.c",
        "lib/free.c",
        "lib/fseek.c",
        "lib/getprogname.c",
        "lib/gl_avltree_oset.c",
        "lib/gl_linked_list.c",
        "lib/gl_linkedhash_list.c",
        "lib/gl_list.c",
        "lib/gl_oset.c",
        "lib/gl_xlist.c",
        "lib/gl_xoset.c",
        "lib/glthread/lock.c",
        "lib/glthread/threadlib.c",
        "lib/glthread/tls.c",
        "lib/hash-pjw.c",
        "lib/hash-triple-simple.c",
        "lib/hash.c",
        "lib/localcharset.c",
        "lib/malloc/dynarray_at_failure.c",
        "lib/malloc/dynarray_emplace_enlarge.c",
        "lib/malloc/dynarray_finalize.c",
        "lib/malloc/dynarray_resize.c",
        "lib/malloc/dynarray_resize_clear.c",
        "lib/malloc/scratch_buffer_dupfree.c",
        "lib/malloc/scratch_buffer_grow.c",
        "lib/malloc/scratch_buffer_grow_preserve.c",
        "lib/malloc/scratch_buffer_set_array_size.c",
        "lib/malloca.c",
        "lib/math.c",
        "lib/mbchar.c",
        "lib/mbiter.c",
        "lib/mbslen.c",
        "lib/mbsstr.c",
        "lib/mbuiter.c",
        "lib/memchr2.c",
        "lib/mkstemp-safer.c",
        "lib/obstack.c",
        "lib/pipe-safer.c",
        "lib/pipe2-safer.c",
        "lib/printf-args.c",
        "lib/printf-frexpl.c",
        "lib/printf-parse.c",
        "lib/progname.c",
        "lib/propername.c",
        "lib/quotearg.c",
        "lib/reallocarray.c",
        "lib/sig-handler.c",
        "lib/sigsegv.c",
        "lib/spawn-pipe.c",
        "lib/spawn_faction_addchdir.c",
        "lib/stackvma.c",
        "lib/striconv.c",
        "lib/stripslash.c",
        "lib/strnlen1.c",
        "lib/tmpdir.c",
        "lib/trim.c",
        "lib/vasnprintf.c",
        "lib/vasprintf.c",
        "lib/verror.c",
        "lib/version-etc-fsf.c",
        "lib/version-etc.c",
        "lib/wait-process.c",
        "lib/wctype-h.c",
        "lib/xalloc-die.c",
        "lib/xasprintf.c",
        "lib/xmalloc.c",
        "lib/xmalloca.c",
        "lib/xprintf.c",
        "lib/xsize.c",
        "lib/xstriconv.c",
        "lib/xstrndup.c",
        "lib/xvasprintf.c",
    ],
    deps = [
        ":m4_headers",
    ],
    output_licenses = ["unencumbered"],
    defines = [
        "_GNU_SOURCE",
        "O_BINARY=0",
    ],
    copts = [
        "-w",
    ],
)

pseudo_configure(
    name = "config_h",
    src = "lib/config.hin",
    out = "lib/config.h",
    defs = [
        "CHECK_PRINTF_SAFE",
        "DBL_EXPBIT0_WORD",
        "FUNC_NL_LANGINFO_YESEXPR_WORKS",
        "FUNC_REALPATH_WORKS",
        "GNULIB_CANONICALIZE_LGPL",
        "GNULIB_CLOSE_STREAM",
        "GNULIB_DIRNAME",
        "GNULIB_FD_SAFER_FLAG",
        "GNULIB_FFLUSH",
        "GNULIB_FILENAMECAT",
        "GNULIB_FOPEN_SAFER",
        "GNULIB_FSCANF",
        "GNULIB_LOCK",
        "GNULIB_PIPE2_SAFER",
        "GNULIB_SCANF",
        "GNULIB_SIGPIPE",
        "GNULIB_SNPRINTF",
        "GNULIB_STRERROR",
        "GNULIB_TEST_ACCEPT",
        "GNULIB_TEST_ACCESS",
        "GNULIB_TEST_BIND",
        "GNULIB_TEST_BTOWC",
        "GNULIB_TEST_CALLOC_POSIX",
        "GNULIB_TEST_CANONICALIZE",
        "GNULIB_TEST_CANONICALIZE_FILE_NAME",
        "GNULIB_TEST_CHDIR",
        "GNULIB_TEST_CLOEXEC",
        "GNULIB_TEST_CLOSE",
        "GNULIB_TEST_CLOSEDIR",
        "GNULIB_TEST_CONNECT",
        "GNULIB_TEST_CREAT",
        "GNULIB_TEST_DIRFD",
        "GNULIB_TEST_DUP",
        "GNULIB_TEST_DUP2",
        "GNULIB_TEST_ENVIRON",
        "GNULIB_TEST_EXPLICIT_BZERO",
        "GNULIB_TEST_FCHDIR",
        "GNULIB_TEST_FCLOSE",
        "GNULIB_TEST_FCNTL",
        "GNULIB_TEST_FDOPEN",
        "GNULIB_TEST_FDOPENDIR",
        "GNULIB_TEST_FFLUSH",
        "GNULIB_TEST_FGETC",
        "GNULIB_TEST_FGETS",
        "GNULIB_TEST_FOPEN",
        "GNULIB_TEST_FPRINTF",
        "GNULIB_TEST_FPURGE",
        "GNULIB_TEST_FPUTC",
        "GNULIB_TEST_FPUTS",
        "GNULIB_TEST_FREAD",
        "GNULIB_TEST_FREE_POSIX",
        "GNULIB_TEST_FREOPEN",
        "GNULIB_TEST_FREXP",
        "GNULIB_TEST_FREXPL",
        "GNULIB_TEST_FSCANF",
        "GNULIB_TEST_FSEEK",
        "GNULIB_TEST_FSEEKO",
        "GNULIB_TEST_FSTAT",
        "GNULIB_TEST_FSTATAT",
        "GNULIB_TEST_FTELL",
        "GNULIB_TEST_FTELLO",
        "GNULIB_TEST_FTRUNCATE",
        "GNULIB_TEST_FWRITE",
        "GNULIB_TEST_GETC",
        "GNULIB_TEST_GETCHAR",
        "GNULIB_TEST_GETCWD",
        "GNULIB_TEST_GETDTABLESIZE",
        "GNULIB_TEST_GETOPT_POSIX",
        "GNULIB_TEST_GETPAGESIZE",
        "GNULIB_TEST_GETRANDOM",
        "GNULIB_TEST_GETTIMEOFDAY",
        "GNULIB_TEST_IOCTL",
        "GNULIB_TEST_ISWBLANK",
        "GNULIB_TEST_ISWDIGIT",
        "GNULIB_TEST_ISWXDIGIT",
        "GNULIB_TEST_LINK",
        "GNULIB_TEST_LISTEN",
        "GNULIB_TEST_LOCALECONV",
        "GNULIB_TEST_LOCALENAME",
        "GNULIB_TEST_LSEEK",
        "GNULIB_TEST_LSTAT",
        "GNULIB_TEST_MALLOC_POSIX",
        "GNULIB_TEST_MBRTOWC",
        "GNULIB_TEST_MBSINIT",
        "GNULIB_TEST_MBSLEN",
        "GNULIB_TEST_MBSSTR",
        "GNULIB_TEST_MBTOWC",
        "GNULIB_TEST_MEMCHR",
        "GNULIB_TEST_MEMPCPY",
        "GNULIB_TEST_MEMRCHR",
        "GNULIB_TEST_MKDIR",
        "GNULIB_TEST_MKDTEMP",
        "GNULIB_TEST_MKSTEMP",
        "GNULIB_TEST_NANOSLEEP",
        "GNULIB_TEST_NL_LANGINFO",
        "GNULIB_TEST_OPEN",
        "GNULIB_TEST_OPENAT",
        "GNULIB_TEST_OPENDIR",
        "GNULIB_TEST_PERROR",
        "GNULIB_TEST_PIPE",
        "GNULIB_TEST_PIPE2",
        "GNULIB_TEST_POSIX_SPAWN",
        "GNULIB_TEST_POSIX_SPAWNATTR_DESTROY",
        "GNULIB_TEST_POSIX_SPAWNATTR_INIT",
        "GNULIB_TEST_POSIX_SPAWNATTR_SETFLAGS",
        "GNULIB_TEST_POSIX_SPAWNATTR_SETPGROUP",
        "GNULIB_TEST_POSIX_SPAWNATTR_SETSIGMASK",
        "GNULIB_TEST_POSIX_SPAWNP",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_ADDCHDIR",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_ADDCLOSE",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_ADDDUP2",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_ADDOPEN",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_DESTROY",
        "GNULIB_TEST_POSIX_SPAWN_FILE_ACTIONS_INIT",
        "GNULIB_TEST_PRINTF",
        "GNULIB_TEST_PTHREAD_SIGMASK",
        "GNULIB_TEST_PTHREAD_THREAD",
        "GNULIB_TEST_PUTC",
        "GNULIB_TEST_PUTCHAR",
        "GNULIB_TEST_PUTENV",
        "GNULIB_TEST_PUTS",
        "GNULIB_TEST_RAISE",
        "GNULIB_TEST_RAWMEMCHR",
        "GNULIB_TEST_READDIR",
        "GNULIB_TEST_READLINK",
        "GNULIB_TEST_REALLOCARRAY",
        "GNULIB_TEST_REALLOC_POSIX",
        "GNULIB_TEST_REALPATH",
        "GNULIB_TEST_RENAME",
        "GNULIB_TEST_REWINDDIR",
        "GNULIB_TEST_RMDIR",
        "GNULIB_TEST_SCANF",
        "GNULIB_TEST_SCHED_YIELD",
        "GNULIB_TEST_SECURE_GETENV",
        "GNULIB_TEST_SELECT",
        "GNULIB_TEST_SETENV",
        "GNULIB_TEST_SETLOCALE",
        "GNULIB_TEST_SETLOCALE_NULL",
        "GNULIB_TEST_SETSOCKOPT",
        "GNULIB_TEST_SIGACTION",
        "GNULIB_TEST_SIGNBIT",
        "GNULIB_TEST_SIGPROCMASK",
        "GNULIB_TEST_SLEEP",
        "GNULIB_TEST_SNPRINTF",
        "GNULIB_TEST_SOCKET",
        "GNULIB_TEST_STAT",
        "GNULIB_TEST_STPCPY",
        "GNULIB_TEST_STRCHRNUL",
        "GNULIB_TEST_STRDUP",
        "GNULIB_TEST_STRERROR",
        "GNULIB_TEST_STRERROR_R",
        "GNULIB_TEST_STRNDUP",
        "GNULIB_TEST_STRNLEN",
        "GNULIB_TEST_STRSIGNAL",
        "GNULIB_TEST_STRSTR",
        "GNULIB_TEST_STRTOD",
        "GNULIB_TEST_SYMLINK",
        "GNULIB_TEST_UNSETENV",
        "GNULIB_TEST_VASPRINTF",
        "GNULIB_TEST_VFPRINTF",
        "GNULIB_TEST_VPRINTF",
        "GNULIB_TEST_WAITPID",
        "GNULIB_TEST_WCRTOMB",
        "GNULIB_TEST_WCTOB",
        "GNULIB_TEST_WCTOMB",
        "GNULIB_TEST_WCWIDTH",
        "GNULIB_TEST_WRITE",
        "GNULIB_UNISTR_U8_MBTOUCR",
        "GNULIB_UNISTR_U8_UCTOMB",
        "GNULIB_WCHAR_SINGLE_LOCALE",
        "GNULIB_XALLOC",
        "GNULIB_XALLOC_DIE",
        "HAVE_ALLOCA",
        "HAVE_ALLOCA_H",
        "HAVE_ARPA_INET_H",
        "HAVE_BTOWC",
        "HAVE_BUG_BIG_NANOSLEEP",
        "HAVE_CANONICALIZE_FILE_NAME",
        "HAVE_CATGETS",
        "HAVE_CLOCK_GETTIME",
        "HAVE_CLOCK_SETTIME",
        "HAVE_CLOSEDIR",
        "HAVE_DCGETTEXT",
        "HAVE_DECL_ALARM",
        "HAVE_DECL_CLEARERR_UNLOCKED",
        "HAVE_DECL_DIRFD",
        "HAVE_DECL_ECVT",
        "HAVE_DECL_EXECVPE",
        "HAVE_DECL_FCHDIR",
        "HAVE_DECL_FCLOSEALL",
        "HAVE_DECL_FCVT",
        "HAVE_DECL_FDOPENDIR",
        "HAVE_DECL_FEOF_UNLOCKED",
        "HAVE_DECL_FERROR_UNLOCKED",
        "HAVE_DECL_FFLUSH_UNLOCKED",
        "HAVE_DECL_FGETS_UNLOCKED",
        "HAVE_DECL_FPUTC_UNLOCKED",
        "HAVE_DECL_FPUTS_UNLOCKED",
        "HAVE_DECL_FREAD_UNLOCKED",
        "HAVE_DECL_FSEEKO",
        "HAVE_DECL_FTELLO",
        "HAVE_DECL_FWRITE_UNLOCKED",
        "HAVE_DECL_GCVT",
        "HAVE_DECL_GETCHAR_UNLOCKED",
        "HAVE_DECL_GETCWD",
        "HAVE_DECL_GETC_UNLOCKED",
        "HAVE_DECL_GETDTABLESIZE",
        "HAVE_DECL_INET_PTON",
        "HAVE_DECL_ISBLANK",
        "HAVE_DECL_ISWBLANK",
        "HAVE_DECL_MEMRCHR",
        "HAVE_DECL_POSIX_SPAWN",
        "HAVE_DECL_PROGRAM_INVOCATION_NAME",
        "HAVE_DECL_PUTCHAR_UNLOCKED",
        "HAVE_DECL_PUTC_UNLOCKED",
        "HAVE_DECL_SETENV",
        "HAVE_DECL_SLEEP",
        "HAVE_DECL_SNPRINTF",
        "HAVE_DECL_STRDUP",
        "HAVE_DECL_STRERROR_R",
        "HAVE_DECL_STRNDUP",
        "HAVE_DECL_STRNLEN",
        "HAVE_DECL_STRSIGNAL",
        "HAVE_DECL_UNSETENV",
        "HAVE_DECL_WCSDUP",
        "HAVE_DECL_WCTOB",
        "HAVE_DECL_WCWIDTH",
        "HAVE_DECL___FPENDING",
        "HAVE_DIRENT_H",
        "HAVE_DIRFD",
        "HAVE_DUPLOCALE",
        "HAVE_ENVIRON_DECL",
        "HAVE_EXPLICIT_BZERO",
        "HAVE_FACCESSAT",
        "HAVE_FCHDIR",
        "HAVE_FCNTL",
        "HAVE_FDOPENDIR",
        "HAVE_FEATURES_H",
        "HAVE_FREELOCALE",
        "HAVE_FREXPL_IN_LIBC",
        "HAVE_FREXP_IN_LIBC",
        "HAVE_FSEEKO",
        "HAVE_FSTATAT",
        "HAVE_FTRUNCATE",
        "HAVE_GETCWD",
        "HAVE_GETDTABLESIZE",
        "HAVE_GETEGID",
        "HAVE_GETEUID",
        "HAVE_GETGID",
        "HAVE_GETOPT_H",
        "HAVE_GETOPT_LONG_ONLY",
        "HAVE_GETPAGESIZE",
        "HAVE_GETRANDOM",
        "HAVE_GETRLIMIT",
        "HAVE_GETTEXT",
        "HAVE_GETTIMEOFDAY",
        "HAVE_GETUID",
        "HAVE_GOOD_USELOCALE",
        "HAVE_ICONV",
        "HAVE_ICONV_H",
        "HAVE_INLINE",
        "HAVE_INTMAX_T",
        "HAVE_INTTYPES_H",
        "HAVE_INTTYPES_H_WITH_UINTMAX",
        "HAVE_IOCTL",
        "HAVE_IPV4",
        "HAVE_IPV6",
        "HAVE_ISBLANK",
        "HAVE_ISNAND_IN_LIBC",
        "HAVE_ISNANF_IN_LIBC",
        "HAVE_ISNANL_IN_LIBC",
        "HAVE_ISWBLANK",
        "HAVE_ISWCNTRL",
        "HAVE_ISWCTYPE",
        "HAVE_LANGINFO_CODESET",
        "HAVE_LANGINFO_H",
        "HAVE_LC_MESSAGES",
        "HAVE_LDEXPL_IN_LIBC",
        "HAVE_LDEXP_IN_LIBC",
        "HAVE_LIBINTL_H",
        "HAVE_LIMITS_H",
        "HAVE_LINK",
        "HAVE_LONG_LONG_INT",
        "HAVE_LSTAT",
        "HAVE_MALLOC_H",
        "HAVE_MALLOC_POSIX",
        "HAVE_MAP_ANONYMOUS",
        "HAVE_MATH_H",
        "HAVE_MBRTOWC",
        "HAVE_MBSINIT",
        "HAVE_MBSTATE_T",
        "HAVE_MBTOWC",
        "HAVE_MEMPCPY",
        "HAVE_MEMRCHR",
        "HAVE_MINIMALLY_WORKING_GETCWD",
        "HAVE_MINMAX_IN_SYS_PARAM_H",
        "HAVE_MKDTEMP",
        "HAVE_MKSTEMP",
        "HAVE_MPROTECT",
        "HAVE_NETDB_H",
        "HAVE_NETINET_IN_H",
        "HAVE_NEWLOCALE",
        "HAVE_NL_LANGINFO",
        "HAVE_OPENAT",
        "HAVE_OPENDIR",
        "HAVE_PIPE",
        "HAVE_PIPE2",
        "HAVE_POSIX_SPAWN",
        "HAVE_POSIX_SPAWNATTR_T",
        "HAVE_POSIX_SPAWN_FILE_ACTIONS_T",
        "HAVE_PTHREAD_API",
        "HAVE_PTHREAD_H",
        "HAVE_PTHREAD_SPINLOCK_T",
        "HAVE_PTHREAD_T",
        "HAVE_RAISE",
        "HAVE_RAWMEMCHR",
        "HAVE_READDIR",
        "HAVE_READLINK",
        "HAVE_REALLOCARRAY",
        "HAVE_REALPATH",
        "HAVE_REWINDDIR",
        "HAVE_SA_FAMILY_T",
        "HAVE_SCHED_H",
        "HAVE_SEARCH_H",
        "HAVE_SECURE_GETENV",
        "HAVE_SEMAPHORE_H",
        "HAVE_SETENV",
        "HAVE_SETRLIMIT",
        "HAVE_SHUTDOWN",
        "HAVE_SIGACTION",
        "HAVE_SIGALTSTACK",
        "HAVE_SIGINTERRUPT",
        "HAVE_SIGSET_T",
        "HAVE_SIG_ATOMIC_T",
        "HAVE_SLEEP",
        "HAVE_SNPRINTF",
        "HAVE_SNPRINTF_RETVAL_C99",
        "HAVE_SNPRINTF_TRUNCATION_C99",
        "HAVE_SPAWN_H",
        "HAVE_STDINT_H",
        "HAVE_STDINT_H_WITH_UINTMAX",
        "HAVE_STDIO_EXT_H",
        "HAVE_STDLIB_H",
        "HAVE_STPCPY",
        "HAVE_STRCHRNUL",
        "HAVE_STRERROR_R",
        "HAVE_STRINGS_H",
        "HAVE_STRING_H",
        "HAVE_STRNDUP",
        "HAVE_STRNLEN",
        "HAVE_STRSIGNAL",
        "HAVE_STRUCT_SIGACTION_SA_SIGACTION",
        "HAVE_STRUCT_SOCKADDR_STORAGE",
        "HAVE_STRUCT_SOCKADDR_STORAGE_SS_FAMILY",
        "HAVE_STRUCT_STAT_ST_ATIM_TV_NSEC",
        "HAVE_SYMLINK",
        "HAVE_SYS_CDEFS_H",
        "HAVE_SYS_IOCTL_H",
        "HAVE_SYS_MMAN_H",
        "HAVE_SYS_PARAM_H",
        "HAVE_SYS_RANDOM_H",
        "HAVE_SYS_SELECT_H",
        "HAVE_SYS_SOCKET_H",
        "HAVE_SYS_STAT_H",
        "HAVE_SYS_TIME_H",
        "HAVE_SYS_TYPES_H",
        "HAVE_SYS_UIO_H",
        "HAVE_SYS_WAIT_H",
        "HAVE_THREADS_H",
        "HAVE_TOWLOWER",
        "HAVE_TSEARCH",
        "HAVE_UNISTD_H",
        "HAVE_UNSETENV",
        "HAVE_UNSIGNED_LONG_LONG_INT",
        "HAVE_USELOCALE",
        "HAVE_VASPRINTF",
        "HAVE_WAITID",
        "HAVE_WCHAR_H",
        "HAVE_WCHAR_T",
        "HAVE_WCRTOMB",
        "HAVE_WCSLEN",
        "HAVE_WCSNLEN",
        "HAVE_WCTOB",
        "HAVE_WCTYPE_H",
        "HAVE_WCWIDTH",
        "HAVE_WINT_T",
        "HAVE_WORKING_O_NOATIME",
        "HAVE_WORKING_O_NOFOLLOW",
        "HAVE_WORKING_SIGALTSTACK",
        "HAVE_WORKING_USELOCALE",
        "HAVE__BOOL",
        "HAVE___BUILTIN_EXPECT",
        "HAVE___FPURGE",
        "HAVE___FREADING",
        "HAVE___INLINE",
        "HAVE___XPG_STRERROR_R",
        "LSTAT_FOLLOWS_SLASHED_SYMLINK",
        "MALLOC_0_IS_NONNULL",
        "RENAME_OPEN_FILE_WORKS",
        "SIGNAL_SAFE_LIST",
        "STDC_HEADERS",
        "STRERROR_R_CHAR_P",
    ],
    mappings = {
        "DBL_EXPBIT0_BIT": "20",
        "FLEXIBLE_ARRAY_MEMBER": "",
        "FLT_EXPBIT0_BIT": "23",
        "FLT_EXPBIT0_WORD": "0",
        "FUNC_FFLUSH_STDIN": "0",
        "GNULIB_STRERROR_R_POSIX": "IN_M4_GNULIB_TESTS",
        "HAVE_DECL_FPURGE": "0",
        "HAVE_DECL__SNPRINTF": "0",
        "HAVE_DECL___ARGV": "0",
        "ICONV_CONST": "",
        "LDBL_EXPBIT0_BIT": "0",
        "LDBL_EXPBIT0_WORD": "2",
        "PACKAGE": '"m4"',
        "PACKAGE_BUGREPORT": '"bug-m4@gnu.org"',
        "PACKAGE_NAME": '"GNU M4"',
        "PACKAGE_STRING": '"GNU M4 1.4.19"',
        "PACKAGE_TARNAME": '"m4"',
        "PACKAGE_URL": '"www.gnu.org_software_m4"',
        "PACKAGE_VERSION": '"1.4.19"',
        "PROMOTED_MODE_T": "mode_t",
        "STACK_DIRECTION": "-1",
        "SYSCMD_SHELL": r'"\/bin\/sh"',
        "USER_LABEL_PREFIX": "",
        "USE_UNLOCKED_IO": "GNULIB_STDIO_SINGLE_THREAD",
        "VERSION": '"1.4.19"',
        "_GL_UNUSED": "_GL_ATTRIBUTE_MAYBE_UNUSED",
        "_UNUSED_PARAMETER_": "_GL_ATTRIBUTE_MAYBE_UNUSED",
        "gl_va_copy(a,b)": "((a) = (b))",
        "_GL_CMP(n1, n2)": "(((n1) > (n2)) - ((n1) < (n2)))",
        "restrict": "__restrict__",
    },
    additional = {
        "_GL_ARG_NONNULL(o)": "",
        "_GL_ATTRIBUTE_FORMAT_PRINTF(a, b)": "",
    },
)

automake_substitution(
    name = "sigsegv_h",
    src = "lib/sigsegv.in.h",
    out = "lib/sigsegv.h",
)

touch(
    name = "configmake_h",
    out = "lib/configmake.h",
)
